<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="multiply"
    android:backgroundTint="#23EDC616"
    android:background="@drawable/fondodespara"
    tools:context=".ui.desparasitacion.DesparacitacionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    <LinearLayout
        android:id="@+id/linearl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textCal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/seleccionFecha"
            android:fontFamily="@font/dosis_medium"
            android:textSize="20dp"
            android:textStyle="bold" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp" />

        <LinearLayout
            android:id="@+id/lineaFormato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/infoCalendario"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:fontFamily="@font/dosis_medium"
                android:visibility="gone"
                android:text="@string/agregarDes"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/infoDe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/agregardatosdes"
                android:textStyle="bold"
                android:fontFamily="@font/dosis_medium"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/seleccionar"
                android:fontFamily="@font/dosis_medium"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/dosis_medium"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/mascotasSpiner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18dp" />


            <EditText
                android:id="@+id/nombreProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/dosis_medium"
                android:hint="@string/producto"
                android:inputType="textPersonName" />


            <Button
                android:id="@+id/guardadDesparasitacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/guardad"
                android:fontFamily="@font/dosis_medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


        </LinearLayout>




    </LinearLayout>


</ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>