<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoarriba"
    tools:context=".RegistroConCorreo">


    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/nombre"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:fontFamily="@font/dosis_medium"
        android:hint="@string/vacio"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/correo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre" />

    <EditText
        android:id="@+id/correoelectronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:fontFamily="@font/dosis_medium"
        android:hint="@string/vacio"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="40dp"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/contraseña"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoelectronico" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="40dp"
        android:ems="10"
        android:fontFamily="@font/dosis_medium"
        android:hint="@string/vacio"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="22dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/dosis_medium"
        android:foregroundGravity="center"
        android:gravity="center"
        android:onClick="createAccount"
        android:text="@string/registrate"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:iconTint="#FFFFFF"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="48dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/dosis_medium"
        android:text="@string/recuperar"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="?attr/colorControlNormal"
        android:textSize="16sp"
        android:visibility="invisible"
        app:iconSize="25dp"
        app:iconTintMode="multiply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>